changed header Styles & responsiveness --version 01.00.03

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="Jad Taha - developer - ios developer - ios - programmer - ios programmer - lebanese developer - international ios developer" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.ico" rel="icon">
-  <link href="assets/img/favicon.ico" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.png" rel="apple-touch-icon">
 
   <!-- Main CSS File -->
   <link href="./assets/css/main.css" rel="stylesheet">
@@ -54,12 +54,13 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-start">
+    <div class="hero-container " data-aos="fade-in">
       <h1>Jad Taha</h1>
       <p>I'm <span class="typed" data-typed-items="a passionate Full-Stack Web Developer, specialized
         in both front-end and back-end."></span></p>
     </div>
+    
   </section><!-- End Hero -->
 
   <main id="main">
